Disabled scroll when showing mobile nav

--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -97,7 +97,7 @@ button, input, select
 }
 
 body{background-color: $color_primary;}
-body.body-nav-open
+body.scroll-disabled
 {    
     height: 100vh;
     overflow: hidden;
